--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "target": "ES2020",
     "esModuleInterop": true,
     "allowJs": true,
-    "strict": true,
+    "strictNullChecks": false,
   }
 }
