--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Daniel Pavone <danielpavone@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/validator": "^13.1.3",
@@ -30,6 +31,7 @@
     "test:ci": "yarn test --coverage"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.5.2"
   }
 }
